--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,22 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <app-root>
+    <div class="container">
+      <div class="row">
+        <div id="loader">
+          <div class="dot"></div>
+          <div class="dot"></div>
+          <div class="dot"></div>
+          <div class="loading">
+            <p class="spinner-message">
+              please wait
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </app-root>  
 </body>
+
 </html>
